@@ -1,5 +1,24 @@
 {include file="header.html"}
 <!--// $Id$ //-->
+<SCRIPT language="javaScript">
+{literal}
+<!-- 
+	function PrintList()
+	{
+		document.nodesearch.action = "?m=nodesearch&search=1&print=1";
+		document.nodesearch.target = "_BLANK";
+		document.nodesearch.submit();
+	}
+
+	function Search()
+	{
+		document.nodesearch.action = "?m=nodesearch&search=1";
+		document.nodesearch.target = "";
+		document.nodesearch.submit();
+	}
+//-->	
+{/literal}
+</SCRIPT>
 <H1>{$layout.pagetitle}</H1>
 <P>
 <FORM METHOD="POST" ACTION="?m=nodesearch&search" NAME="nodesearch">
@@ -44,7 +63,8 @@
 	</TR>
 	<TR CLASS="light">
 		<TD CLASS="fbottomu" WIDTH="100%" COLSPAN="2" ALIGN="right">
-			<A href="javascript:document.nodesearch.submit()" accesskey="s">{t}Search{/t} <IMG SRC="img/search.gif" BORDER="0" ALIGN="absmiddle" ALT=""></A>
+			<A href="javascript:Search()" accesskey="s">{t}Submit{/t} <IMG SRC="img/search.gif" BORDER="0" ALIGN="absmiddle" ALT=""></A>
+			<A href="javascript:PrintList()">{t}Print{/t} <IMG SRC="img/print.gif" BORDER="0" ALIGN="absmiddle" ALT=""></A>
 		</TD>
 	</TR>
 </TABLE>
