@@ -41,6 +41,8 @@ version 1.5.6 Baal (??/??/????):
     reading of invoice type configuration option from database (alec)
   - while adding or searching tickets in helpdesk customer ID can be
     specified instead of selecting customer from the list (alec)
+  - nodes and customers search results (if they are lists) can be displayed 
+    in printer-friendly format (alec)
 
 version 1.5.5 Anubis (25/03/2005):
 
